Fix Missing Special Characters
Fix a bug that lead to most special characters not showing.
Was caused by the very limited charset of Mugglenews.
Fixed by replacing Mugglenews with Noto Sans Condensed Black for all
user generated content.

--- a/src/res/style/style.css
+++ b/src/res/style/style.css
@@ -21,6 +21,17 @@ video {
     src: url("../mugglenews.ttf");
 }
 
+@font-face {
+    font-family: NotoSans-CondensedBlack;
+    src: url("../NotoSans-CondensedBlack.ttf");
+}
+
+b {
+    color: #000000;
+    text-shadow: 1px 0;
+    letter-spacing: 1px;
+}
+
 a {
     color: black;
     text-decoration: none;
@@ -57,7 +68,7 @@ h3 {
 }
 
 .textflow {
-    font-family: Mugglenews;
+    font-family: NotoSans-CondensedBlack, arial, serif;
 }
 
 .text_area {
@@ -84,5 +95,8 @@ h3 {
 }
 
 figcaption {
-    font-family: Mugglenews;
+    font-family: NotoSans-CondensedBlack, arial, serif;
+    color: #000000;
+    text-shadow: 1px 0;
+    letter-spacing: 1px;
 }
